Improve legibility of menu and navigation and language switcher. Shuffle position of leaves-3. fix spacing around front page on mobile.

--- a/src/components/language-switcher/language-switcher.scss
+++ b/src/components/language-switcher/language-switcher.scss
@@ -10,6 +10,7 @@
 
   .language {
     color: $white;
+    font-weight: bold;
     margin-left: 16px;
     opacity: 0.7;
     padding: 4px 0;
