--- a/src/components/leaves/leaves.scss
+++ b/src/components/leaves/leaves.scss
@@ -52,18 +52,18 @@
   width: 120%;
 
   .blob-1 {
-    transform: translateY(-75%);
+    transform: translateY(-30%);
     width: 90%;
   }
 
   .blob-2 {
     left: 0;
-    transform: translateY(-100%);
+    transform: translateY(-70%);
     width: 90%;
   }
 
   .blob-3 {
-    transform: translateY(-10%);
+    transform: translateY(-150%);
     width: 90%;
   }
 }
