--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -3,7 +3,6 @@
 @import "../../styles/responsive.scss";
 
 .navigation {
-  margin-left: 12px;
   user-select: none;
 
   &.open {
@@ -20,7 +19,9 @@
 
   .menu-button {
     color: $white;
-    font-size: 2rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    padding: 0 24px;
     text-shadow: 0 0 1px transparentize($black, 0.1);
   }
 
@@ -41,7 +42,6 @@
     flex-direction: column;
     font-size: 1.8rem;
     justify-content: flex-end;
-    margin-left: -12px;
     max-height: 0;
     opacity: 0;
     overflow: hidden;
@@ -59,24 +59,30 @@
     display: flex;
     flex-shrink: 0;
     height: 46px;
-    padding: 0 12px 0 54px;
+    padding: 0 12px;
     position: relative;
+    text-align: center;
     text-decoration: none;
     z-index: 2;
 
     &.active {
-      background-image: url("../../static/images/blob-2-green.png");
-      background-position: 4px 50%;
+      background-image: url("../../static/images/blob-2-green.png"),
+        url("../../static/images/blob-1-purple.png");
+      background-position: 20% 50%, 80% 50%;
       background-repeat: no-repeat;
       background-size: contain;
     }
 
     .translation {
+      display: block;
       position: relative;
+      width: 100%;
     }
   }
 
   @include media(">=tablet") {
+    margin-left: 12px;
+
     .menu-button,
     .veil {
       display: none;
@@ -85,6 +91,7 @@
     .menu-items {
       flex-direction: row;
       font-size: 1.7rem;
+      font-weight: bold;
       height: 100%;
       margin-left: 0;
       max-height: inherit;
