--- a/src/components/page-home/page-home.scss
+++ b/src/components/page-home/page-home.scss
@@ -2,7 +2,6 @@
 
 .home {
   font-weight: bold;
-  padding: 40px 0;
   text-align: center;
 
   article {
@@ -12,7 +11,7 @@
     display: flex;
     box-shadow: inset 0 0 4px transparentize($black, 0.4);
     flex-direction: column;
-    margin: 0 auto;
+    margin: 2.5% auto;
     max-width: 640px;
     overflow: hidden;
     transition: transform ease-in-out 660ms;
